// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arm 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "armv7l",
      "file": "TestApp_1.1.0_armv7l.deb",
    },
  ],
}
`;

exports[`arm 2`] = `
Array [
  "/",
  "/opt/",
  "/usr/",
  "/opt/Test App ßW/",
  "/opt/Test App ßW/blink_image_resources_200_percent.pak",
  "/opt/Test App ßW/content_resources_200_percent.pak",
  "/opt/Test App ßW/content_shell.pak",
  "/opt/Test App ßW/icudtl.dat",
  "/opt/Test App ßW/libffmpeg.so",
  "/opt/Test App ßW/libnode.so",
  "/opt/Test App ßW/LICENSE.electron.txt",
  "/opt/Test App ßW/LICENSES.chromium.html",
  "/opt/Test App ßW/natives_blob.bin",
  "/opt/Test App ßW/pdf_viewer_resources.pak",
  "/opt/Test App ßW/snapshot_blob.bin",
  "/opt/Test App ßW/testapp",
  "/opt/Test App ßW/ui_resources_200_percent.pak",
  "/opt/Test App ßW/views_resources_200_percent.pak",
  "/usr/share/",
  "/opt/Test App ßW/resources/",
  "/opt/Test App ßW/resources/app.asar",
  "/opt/Test App ßW/resources/electron.asar",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/24x24/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/96x96/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/24x24/apps/",
  "/usr/share/icons/hicolor/24x24/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
  "/usr/share/icons/hicolor/96x96/apps/",
  "/usr/share/icons/hicolor/96x96/apps/testapp.png",
]
`;

exports[`arm 3`] = `
Object {
  "Architecture": "armv7l",
  "Depends": "gconf2, gconf-service, libnotify4, libappindicator1, libxtst6, libnss3, libxss1",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "extra",
  "Section": "devel",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`arm 4`] = `"Test Application (test quite “ #378)"`;

exports[`custom depends 1`] = `
"[Desktop Entry]
Name=Test App ßW
Comment=Test Application (test quite “ #378)
Exec=\\"/opt/Test App ßW/Boo\\" %U
Terminal=false
Type=Application
Icon=Boo
Categories=Development;
"
`;

exports[`custom depends 2`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
  ],
}
`;

exports[`custom depends 3`] = `
Array [
  "/",
  "/opt/",
  "/usr/",
  "/opt/Test App ßW/",
  "/opt/Test App ßW/blink_image_resources_200_percent.pak",
  "/opt/Test App ßW/Boo",
  "/opt/Test App ßW/content_resources_200_percent.pak",
  "/opt/Test App ßW/content_shell.pak",
  "/opt/Test App ßW/icudtl.dat",
  "/opt/Test App ßW/libffmpeg.so",
  "/opt/Test App ßW/libnode.so",
  "/opt/Test App ßW/LICENSE.electron.txt",
  "/opt/Test App ßW/LICENSES.chromium.html",
  "/opt/Test App ßW/natives_blob.bin",
  "/opt/Test App ßW/pdf_viewer_resources.pak",
  "/opt/Test App ßW/snapshot_blob.bin",
  "/opt/Test App ßW/ui_resources_200_percent.pak",
  "/opt/Test App ßW/views_resources_200_percent.pak",
  "/usr/share/",
  "/opt/Test App ßW/resources/",
  "/opt/Test App ßW/resources/app.asar",
  "/opt/Test App ßW/resources/electron.asar",
  "/usr/share/applications/",
  "/usr/share/applications/Boo.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/24x24/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/96x96/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/Boo.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/Boo.png",
  "/usr/share/icons/hicolor/24x24/apps/",
  "/usr/share/icons/hicolor/24x24/apps/Boo.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/Boo.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/Boo.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/Boo.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/Boo.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/Boo.png",
  "/usr/share/icons/hicolor/96x96/apps/",
  "/usr/share/icons/hicolor/96x96/apps/Boo.png",
]
`;

exports[`custom depends 4`] = `
Object {
  "Architecture": "amd64",
  "Depends": "foo",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "extra",
  "Section": "devel",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`custom depends 5`] = `"Test Application (test quite “ #378)"`;

exports[`deb 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
  ],
}
`;

exports[`deb 2`] = `
Array [
  "/",
  "/opt/",
  "/usr/",
  "/opt/Test App ßW/",
  "/opt/Test App ßW/blink_image_resources_200_percent.pak",
  "/opt/Test App ßW/content_resources_200_percent.pak",
  "/opt/Test App ßW/content_shell.pak",
  "/opt/Test App ßW/icudtl.dat",
  "/opt/Test App ßW/libffmpeg.so",
  "/opt/Test App ßW/libnode.so",
  "/opt/Test App ßW/LICENSE.electron.txt",
  "/opt/Test App ßW/LICENSES.chromium.html",
  "/opt/Test App ßW/natives_blob.bin",
  "/opt/Test App ßW/pdf_viewer_resources.pak",
  "/opt/Test App ßW/snapshot_blob.bin",
  "/opt/Test App ßW/testapp",
  "/opt/Test App ßW/ui_resources_200_percent.pak",
  "/opt/Test App ßW/views_resources_200_percent.pak",
  "/usr/share/",
  "/opt/Test App ßW/resources/",
  "/opt/Test App ßW/resources/app.asar",
  "/opt/Test App ßW/resources/electron.asar",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/24x24/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/96x96/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/24x24/apps/",
  "/usr/share/icons/hicolor/24x24/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
  "/usr/share/icons/hicolor/96x96/apps/",
  "/usr/share/icons/hicolor/96x96/apps/testapp.png",
]
`;

exports[`deb 3`] = `
Object {
  "Architecture": "amd64",
  "Depends": "gconf2, gconf-service, libnotify4, libappindicator1, libxtst6, libnss3, libxss1",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "extra",
  "Section": "devel",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`deb 4`] = `"Test Application (test quite “ #378)"`;
